Fix Spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
   --grey: #f5f1f1;
   --active-color: #413b3b;
   --text-color: #5e5e5e;
-  --padding: 5%;
+  --padding-x: 5%;
+  --padding-y: 50px;
 }
 
 * {
@@ -46,7 +47,7 @@ header {
   background-color: whitesmoke;
   display: flex;
   align-items: center;
-  padding: 0 var(--padding);
+  padding: 0 var(--padding-x);
   width: 100%;
   height: 50px;
   position: fixed;
@@ -79,7 +80,7 @@ header {
 }
 
 .mobile-navbar-menu-content {
-  padding: 0 var(--padding);
+  padding: 0 var(--padding-x);
   z-index: 12;
   display: flex;
   flex-direction: column;
@@ -107,7 +108,7 @@ header {
 }
 
 .headline-content {
-  padding: 50px var(--padding);
+  padding: var(--padding-y) var(--padding-x);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -150,7 +151,7 @@ header {
 
 #highlights,
 #gallery {
-  padding: 50px var(--padding);
+  padding: var(--padding-y) var(--padding-x);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -233,7 +234,7 @@ header {
 
 #features,
 #footer {
-  padding: 50px var(--padding);
+  padding: var(--padding-y) var(--padding-x);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -301,7 +302,8 @@ header {
 
 @media (min-width: 768px) {
   :root {
-    --padding: 10%;
+    --padding-x: 10%;
+    --padding-y: 100px;
   }
 
   .mobile-navbar {
@@ -343,5 +345,10 @@ header {
 
   .highlights-card .half-wrapper {
     flex-direction: column;
+  }
+
+  .sub-heading hr {
+    margin-top: 20px;
+    margin-bottom: 70px;
   }
 }
